--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,8 +6,9 @@
     
     <nav id="menu">
         <span class="icon icon-x-altx-alt" id="icon-menu-close"></span>
+        <a href="#">Lista de Bots</a>
         <a href="#">Agregar Bot</a>
-        <a href="#">Reportar Falla</a>        
+        <a href="#">Reportar Falla</a>     
     </nav>
 
 </header>
