--- a/public/css/header.css
+++ b/public/css/header.css
@@ -110,4 +110,8 @@ header nav a:hover {
     width: auto;
   }
 }
+
+.header-login h1 {
+  padding: 15px;
+}
 /*# sourceMappingURL=header.css.map */
