Se agrega la base de datos, la configuración de sequelize, creamos los modelos correspondientes, se agrega el Script para crear la DB, se crean las semillas de inyección de datos y finalmente se agrega un PDF con el diagrama

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -21,6 +21,18 @@ header h1 {
   text-align: center;
 }
 
+header .mensaje-bienvendida {
+  color: #fff;
+  font-size: 1.5rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding-top: 10px;
+  padding-right: 10px;
+}
+
 header .menu-icon-content {
   width: 100%;
   text-align: center;
