--- a/public/css/header.scss
+++ b/public/css/header.scss
@@ -30,15 +30,13 @@ header {
     }
 
     .mensaje-bienvendida {
+        position: relative;
         color: #fff;
-        font-size: 1.5rem;
+        text-align: center;
+        font-size: 1.1rem;
         font-family: $font-main;
         font-weight: 600;
-        position: absolute;
-        top: 0;
-        right: 0;
-        padding-top: 10px;
-        padding-right: 10px;
+        padding: 10px 0;
     }
 
     .menu-icon-content {
@@ -56,26 +54,25 @@ header {
             }
         }
     }
-    
+
     nav {
         width: 100%;
         height: 100vh;
         position: absolute;
         top: 0;
-        background-color: rgba($grayStrong, .8);
-        transition: all .5s;
+        background-color: rgba($grayStrong, 0.8);
+        transition: all 0.5s;
         transform: translateX(-100%);
         z-index: 100;
         &.openMenu {
             transform: translateX(0);
-            
         }
         span {
             display: block;
             padding: 20px;
             font-size: 1.4rem;
             color: #fff;
-            transition: all .3s;
+            transition: all 0.3s;
             &:hover {
                 font-size: 1.3rem;
             }
@@ -88,7 +85,7 @@ header {
             color: #fff;
             font-weight: 600;
             text-decoration: none;
-            transition: all .3s;
+            transition: all 0.3s;
             &:hover {
                 background: $dark;
             }
@@ -99,6 +96,19 @@ header {
         h1 {
             text-align: start;
             padding-left: 20px;
+        }
+
+        .mensaje-bienvendida {
+            display: block;
+            color: #fff;
+            font-size: 1.5rem;
+            font-family: $font-main;
+            font-weight: 600;
+            position: absolute;
+            top: 0;
+            right: 0;
+            padding-top: 10px;
+            padding-right: 10px;
         }
 
         .menu-icon-content {
