--- a/public/css/login.css
+++ b/public/css/login.css
@@ -20,6 +20,13 @@ main .fomulario-login form h2 {
   color: #000000;
 }
 
+main .fomulario-login form h4 {
+  color: #d90000;
+  text-align: center;
+  display: none;
+  padding-bottom: 10px;
+}
+
 main .fomulario-login form label {
   font-weight: 700;
   font-size: 1.2rem;
