--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,10 +16,11 @@
             <img src="/img/bot-login.png" alt="">
         </section>
         <section class="fomulario-login">
-            <form>
+            <form method="POST" action="/">
                 <h2>Login</h2>
-                <label for="email">Correo</label>
-                <input type="email" placeholder="Correo Electrónico" name="email"/>
+                <h4 class="mensaje-error">Hola</h4>
+                <label for="user">Usuario</label>
+                <input type="text" placeholder="Nombre de usuario" name="user"/>
 
                 <label for="password">Contraseña</label>
                 <input type="password" name="password" id="password" placeholder="Password">
@@ -31,7 +32,8 @@
         </section>
     </main>
     <!-- Importamos el footer -->
-    <%- include('./partials/footer.ejs') %> 
+    <%- include('./partials/footer.ejs') %>
+    <script src="/js/procesarLogin.js"></script>
 </body>
 
 </html>
