--- a/public/css/login.css
+++ b/public/css/login.css
@@ -20,11 +20,15 @@ main .fomulario-login form h2 {
   color: #000000;
 }
 
-main .fomulario-login form h4 {
+main .fomulario-login form h4, main .fomulario-login form .mensaje-error-backend {
   color: #d90000;
   text-align: center;
   display: none;
   padding-bottom: 10px;
+}
+
+main .fomulario-login form .mensaje-error-backend {
+  display: block;
 }
 
 main .fomulario-login form label {
