--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,8 +19,11 @@
             <form method="POST" action="/">
                 <h2>Login</h2>
                 <h4 class="mensaje-error">Hola</h4>
+                <% if(primerError) { %> 
+                    <h4 class="mensaje-error-backend"> <%= primerError.msg %>  </h4>
+                <% } %> 
                 <label for="user">Usuario</label>
-                <input type="text" placeholder="Nombre de usuario" name="user"/>
+                <input type="text" placeholder="Nombre de usuario" name="user" value="<%= old && old.user %>" />
 
                 <label for="password">Contraseña</label>
                 <input type="password" name="password" id="password" placeholder="Password">
