--- a/views/error.ejs
+++ b/views/error.ejs
@@ -17,8 +17,8 @@
             <div class="mensaje-error-img">
                 <img src="/img/null-bot.gif" alt="">
             </div>
-            <p>¡¡¡No tienes los permisos suficientes para entar aqui!!!</p>
-            <a href="/"><span>Ir al login</span></a>
+            <p><%= msg %> </p>
+            <a href="<%= uri %> "><span><%= msgEnlace %> </span></a>
         </section>
     </main>
     <!-- Importamos el footer -->
