--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,161 +12,28 @@
     <%- include('./partials/header.ejs'); %> 
     <main>
         <section class="lista-bots">
-            <h2>Lista de bots registrados</h2>
-            <article>
-                <span class="icon icon-circle"></span>
-                <div class="img-content">
-                    <img alt="imagen-bot" src="/img/bots/1.jpg"/>
-                </div>
-                
-                <div class="bot-content">
-                    <p>Nombre del bot: <span>ADONIS</span></p>
-                    <p>Hostname: <span>adoBot</span></p>
-                    <p>Direccion IP: <span>192.168.0.123</span></p>
-                    <span class="boton-administrar"><a href="#">ADMINISTRAR</a></span>
-                </div>
-                
-            </article>
-            <article>
-                <span class="icon icon-circle"></span>
-                <div class="img-content">
-                    <img alt="imagen-bot" src="/img/bots/1.jpg"/>
-                </div>
-                
-                <div class="bot-content">
-                    <p>Nombre del bot: <span>ADONIS</span></p>
-                    <p>Hostname: <span>adoBot</span></p>
-                    <p>Direccion IP: <span>192.168.0.123</span></p>
-                    <span class="boton-administrar"><a href="#">ADMINISTRAR</a></span>
-                </div>
-                
-            </article>
-            <article>
-                <span class="icon icon-circle"></span>
-                <div class="img-content">
-                    <img alt="imagen-bot" src="/img/bots/1.jpg"/>
-                </div>
-                
-                <div class="bot-content">
-                    <p>Nombre del bot: <span>ADONIS</span></p>
-                    <p>Hostname: <span>adoBot</span></p>
-                    <p>Direccion IP: <span>192.168.0.123</span></p>
-                    <span class="boton-administrar"><a href="#">ADMINISTRAR</a></span>
-                </div>
-                
-            </article>
-            <article>
-                <span class="icon icon-circle"></span>
-                <div class="img-content">
-                    <img alt="imagen-bot" src="/img/bots/1.jpg"/>
-                </div>
-                
-                <div class="bot-content">
-                    <p>Nombre del bot: <span>ADONIS</span></p>
-                    <p>Hostname: <span>adoBot</span></p>
-                    <p>Direccion IP: <span>192.168.0.123</span></p>
-                    <span class="boton-administrar"><a href="#">ADMINISTRAR</a></span>
-                </div>
-                
-            </article>
-            <article>
-                <span class="icon icon-circle"></span>
-                <div class="img-content">
-                    <img alt="imagen-bot" src="/img/bots/1.jpg"/>
-                </div>
-                
-                <div class="bot-content">
-                    <p>Nombre del bot: <span>ADONIS</span></p>
-                    <p>Hostname: <span>adoBot</span></p>
-                    <p>Direccion IP: <span>192.168.0.123</span></p>
-                    <span class="boton-administrar"><a href="#">ADMINISTRAR</a></span>
-                </div>
-                
-            </article>
-            <article>
-                <span class="icon icon-circle"></span>
-                <div class="img-content">
-                    <img alt="imagen-bot" src="/img/bots/1.jpg"/>
-                </div>
-                
-                <div class="bot-content">
-                    <p>Nombre del bot: <span>ADONIS</span></p>
-                    <p>Hostname: <span>adoBot</span></p>
-                    <p>Direccion IP: <span>192.168.0.123</span></p>
-                    <span class="boton-administrar"><a href="#">ADMINISTRAR</a></span>
-                </div>
-                
-            </article>
-            <article>
-                <span class="icon icon-circle"></span>
-                <div class="img-content">
-                    <img alt="imagen-bot" src="/img/bots/1.jpg"/>
-                </div>
-                
-                <div class="bot-content">
-                    <p>Nombre del bot: <span>ADONIS</span></p>
-                    <p>Hostname: <span>adoBot</span></p>
-                    <p>Direccion IP: <span>192.168.0.123</span></p>
-                    <span class="boton-administrar"><a href="#">ADMINISTRAR</a></span>
-                </div>
-                
-            </article>
-            <article>
-                <span class="icon icon-circle"></span>
-                <div class="img-content">
-                    <img alt="imagen-bot" src="/img/bots/1.jpg"/>
-                </div>
-                
-                <div class="bot-content">
-                    <p>Nombre del bot: <span>ADONIS</span></p>
-                    <p>Hostname: <span>adoBot</span></p>
-                    <p>Direccion IP: <span>192.168.0.123</span></p>
-                    <span class="boton-administrar"><a href="#">ADMINISTRAR</a></span>
-                </div>
-                
-            </article>
-            <article>
-                <span class="icon icon-circle"></span>
-                <div class="img-content">
-                    <img alt="imagen-bot" src="/img/bots/1.jpg"/>
-                </div>
-                
-                <div class="bot-content">
-                    <p>Nombre del bot: <span>ADONIS</span></p>
-                    <p>Hostname: <span>adoBot</span></p>
-                    <p>Direccion IP: <span>192.168.0.123</span></p>
-                    <span class="boton-administrar"><a href="#">ADMINISTRAR</a></span>
-                </div>
-                
-            </article>
-            <article>
-                <span class="icon icon-circle"></span>
-                <div class="img-content">
-                    <img alt="imagen-bot" src="/img/bots/1.jpg"/>
-                </div>
-                
-                <div class="bot-content">
-                    <p>Nombre del bot: <span>ADONIS</span></p>
-                    <p>Hostname: <span>adoBot</span></p>
-                    <p>Direccion IP: <span>192.168.0.123</span></p>
-                    <span class="boton-administrar"><a href="#">ADMINISTRAR</a></span>
-                </div>
-                
-            </article>
-            <article>
-                <span class="icon icon-circle"></span>
-                <div class="img-content">
-                    <img alt="imagen-bot" src="/img/bots/1.jpg"/>
-                </div>
-                
-                <div class="bot-content">
-                    <p>Nombre del bot: <span>ADONIS</span></p>
-                    <p>Hostname: <span>adoBot</span></p>
-                    <p>Direccion IP: <span>192.168.0.123</span></p>
-                    <span class="boton-administrar"><a href="#">ADMINISTRAR</a></span>
-                </div>
-                
-            </article>
+            <% if(listaBots.length == 0) { %> 
+                <h2 class="no-bot">No hay ningún bot registrado</h2>
+                <a href="#" class="no-bot enlace-no-bot">Clic para registrar un nuevo bot</a>
+            <% } %> 
+
+            <% if(listaBots.length > 0) { %> 
+                <h2>Lista de bots registrados</h2>            
+                <article>
+                    <span class="icon icon-circle"></span>
+                    <div class="img-content">
+                        <img alt="imagen-bot" src="/img/bots/1.jpg"/>
+                    </div>
+                    
+                    <div class="bot-content">
+                        <p>Nombre del bot: <span>ADONIS</span></p>
+                        <p>Hostname: <span>adoBot</span></p>
+                        <p>Direccion IP: <span>192.168.0.123</span></p>
+                        <span class="boton-administrar"><a href="#">ADMINISTRAR</a></span>
+                    </div>                    
+                </article>
+            <% } %> 
+            
 
         </section>
     </main>
