--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <h1>Universidad Veracruzana</h1>
-    <p class="mensaje-bienvendida">Bienvenido Luis Fernando</p>
+    <p class="mensaje-bienvendida">Bienvenido <%= nombreUsuario %> </p>
     <div class="menu-icon-content">
         <span class="icon icon-menu" id="icon-menu-open"></span>
     </div>
