--- a/public/css/login.css
+++ b/public/css/login.css
@@ -97,6 +97,16 @@ main .fomulario-login form .buttons button[type="submit"] {
   display: none;
 }
 
+main .fomulario-login .formulario-login-img {
+  width: 30%;
+  position: relative;
+  top: -50px;
+}
+
+main .fomulario-login .formulario-login-img img {
+  width: 100%;
+}
+
 @media (min-width: 720px) {
   main {
     display: -webkit-box;
