--- a/public/css/login.scss
+++ b/public/css/login.scss
@@ -11,7 +11,6 @@ $carouselHeight: 320px;
 $font-main: "Montserrat", sans-serif;
 $font-bold: "Montserrat", sans-serif;
 main {
-    //background-color: rebeccapurple;
     .imagen-login {
         display: none;
     }
@@ -19,6 +18,7 @@ main {
         width: 90%;
         margin: auto;
         margin-top: 20px;
+        
         form {
             width: 100%;
             font-family: "Roboto", sans-serif;
@@ -94,6 +94,15 @@ main {
                 button[type="submit"] {
                     display: none;
                 }
+            }
+        }
+
+        .formulario-login-img {
+            width: 30%;
+            position: relative;
+            top: -50px;
+            img {
+                width: 100%;
             }
         }
     }
