Agregamos el registro del bot con express validator y ademas seguimos encapsulado vistas

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
         <section class="lista-bots">
             <% if(listaBots.length == 0) { %> 
                 <h2 class="no-bot">No hay ningún bot registrado</h2>
-                <a href="#" class="no-bot enlace-no-bot">Clic para registrar un nuevo bot</a>
+                <a href="/agregarBot" class="no-bot enlace-no-bot">Clic para registrar un nuevo bot</a>
             <% } %> 
 
             <% if(listaBots.length > 0) { %> 
