--- a/views/agregarBot.ejs
+++ b/views/agregarBot.ejs
@@ -11,20 +11,24 @@
     <%- include('./partials/header.ejs'); %> 
     <main>
         <section class="fomulario-login">
-            <form>
+            <form method="POST" action="/agregarBot">
                 <h2>Registro nuevo Bot</h2>
                 <h4 class="mensaje-error">Hola</h4>
+                <% if(primerError) { %> 
+                    <h4 class="mensaje-error-backend"> <%= primerError.msg %>  </h4>
+                <% } %> 
+
                 <label for="name">Nombre del bot</label>
-                <input type="text" placeholder="Nombre del bot" name="name" id="name"/>
+                <input type="text" placeholder="Nombre del bot" name="name" id="name" value="<%= old && old.name %>"/>
 
                 <label for="host">Hostname</label>
-                <input type="text" placeholder="Hostname" name="host" id="host"/>
+                <input type="text" placeholder="Hostname" name="host" id="host" value="<%= old && old.host %>"/>
 
                 <label for="ip">Dirección IP</label>
-                <input type="text" placeholder="Dirección IP" name="ip" id="ip"/>
+                <input type="text" placeholder="Dirección IP" name="ip" id="ip" value="<%= old && old.ip %>"/>
 
                 <label for="password">Contraseña</label>
-                <input type="password" name="password" id="password" placeholder="Password">
+                <input type="password" name="password" id="password" placeholder="Password" value="<%= old && old.password %>" />
 
                 <div class="buttons">
                     <label for="btn-send" class="btn-send">Enviar</label>
