--- a/views/editarBot.ejs
+++ b/views/editarBot.ejs
@@ -19,13 +19,13 @@
                 <% } %> 
 
                 <label for="name">Nombre del bot</label>
-                <input type="text" placeholder="Nombre del bot" name="name" id="name" value="<%= infoBot && infoBot.nombreBot %>"/>
+                <input type="text" placeholder="Nombre del bot" name="nombreBot" id="name" value="<%= infoBot && infoBot.nombreBot %>"/>
 
                 <label for="host">Hostname</label>
-                <input type="text" placeholder="Hostname" name="host" id="host" value="<%= infoBot && infoBot.hostname %>"/>
+                <input type="text" placeholder="Hostname" name="hostname" id="host" value="<%= infoBot && infoBot.hostname %>"/>
 
                 <label for="ip">Dirección IP</label>
-                <input type="text" placeholder="Dirección IP" name="ip" id="ip" value="<%= infoBot && infoBot.direccionIP %>"/>
+                <input type="text" placeholder="Dirección IP" name="direccionIP" id="ip" value="<%= infoBot && infoBot.direccionIP %>"/>
 
                 <label for="password">Contraseña</label>
                 <input type="password" name="password" id="password" placeholder="Password" value="" />
